2007-11-30  Edgard Lima  <edgard.lima@indt.org.br>

	* ext/metadata/Makefile.am:
	* ext/metadata/gstmetadatamux.c:
	* ext/metadata/gstmetadatamux.h:
	* ext/metadata/gstmetadataparse.c:
	* ext/metadata/metadata.c:
	* ext/metadata/metadata.h:
	* ext/metadata/metadatamuxjpeg.c:
	* ext/metadata/metadatamuxjpeg.h:
	* ext/metadata/metadatamuxpng.c:
	* ext/metadata/metadatamuxpng.h:
	* ext/metadata/metadataparsejpeg.c:
	* ext/metadata/metadataparsejpeg.h:
	* ext/metadata/metadataparsepng.c:
	* ext/metadata/metadataparsepng.h:
	* ext/metadata/metadatatypes.c:
	* ext/metadata/metadatatypes.h:
	  Fixed get_range bug when injecting and stripping. And mux is almost
	  done now.

2007-11-30  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/rfbdecoder.c:
		Use glib macro for swapping

2007-11-29  Thijs Vermeir  <thijsvermeir@gmail.com>

	* gst/librfb/gstrfbsrc.c:
	* gst/librfb/rfbdecoder.c:
	* gst/librfb/rfbdecoder.h:
		Disable CopyRect encoding by default
		Add RRE encoding

2007-11-29  Wim Taymans  <wim.taymans@gmail.com>

	Patch by: Wouter Cloetens <wouter at mind dot be>

	* configure.ac:
	Bump libsoup requirement as libsoup does not support async client
	operation prior to version 2.2.104 and it has some leaks.

	* ext/soup/gstsouphttpsrc.c: (gst_souphttp_src_class_init),
	(gst_souphttp_src_init), (gst_souphttp_src_dispose),
	(gst_souphttp_src_set_property), (gst_souphttp_src_create),
	(gst_souphttp_src_start), (gst_souphttp_src_stop),
	(gst_souphttp_src_unlock), (gst_souphttp_src_unlock_stop),
	(gst_souphttp_src_get_size), (soup_got_headers), (soup_got_body),
	(soup_finished), (soup_got_chunk), (soup_response),
	(soup_session_close):
	* ext/soup/gstsouphttpsrc.h:
	Implement unlock().
	Picks up the size from the Content-Length header and emit a duration
	message.
	Don't leak the GMainContext object.
	Fixes #500099.

2007-11-29  Wim Taymans  <wim.taymans@gmail.com>

	* ext/alsaspdif/alsaspdifsink.c: (alsaspdifsink_set_caps),